Fix bug when autoplay set false, modify src may cause buttons display incorrect; modified css, force text alignment left

--- a/bplayer.css
+++ b/bplayer.css
@@ -88,6 +88,7 @@
 	height: 60px;
 	font-size: 20px;
 	white-space: nowrap;
+	text-align: left;
 	text-overflow: ellipsis;
 	overflow: hidden;
 }
